internal/fixtures/architecture/negative/template-expression/packages/ui/src/environment.ts
export const mode = `outer ${`inner ${process.env.DEEP_WORK_MODE}`}`;
